# pathos

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tasks.md
.github/workflows/: ci.yml  pages.yml  publish.yaml  publish.yml
benchmarks/: .gitignore  FINDINGS.md  SPEC-STATUS.md  bench.py
benchmarks/realistic/: .gitignore  __main__.py  diff.py  lower_bounds.py  metrics.py  records.py  report.py  runner.py
benchmarks/suites/: __init__.py  _spec.py  bin_packing.py  classical.py  power_grid.py  project_scheduling.py  rostering.py  timetabling.py  vrp.py
docs/: getting-started.md  index.md
docs/api/: algorithms.md  result.md  space.md  spaces.md
docs/guides/: cancel-token.md  modes-and-anytime.md
docs/superpowers/plans/: 2026-05-29-pathos-implementation.md  2026-05-30-multiprocessing-backend.md  2026-06-09-schedule-space.md  2026-06-10-realistic-benchmark-suite.md
docs/superpowers/specs/: 2026-06-09-schedule-space-power-grid-design.md  2026-06-10-realistic-benchmark-suite-design.md
examples/: nqueens.py  power_grid.py  puzzle8.py  route_planning.py  tictactoe.py  tsp.py
pathos/: __init__.py  fairness.py
pathos/algorithms/: __init__.py  adversarial.py  base.py  csp.py  evolutionary.py  informed.py  local.py  uninformed.py
pathos/core/: __init__.py  cancel.py  capabilities.py  parallel.py  result.py  solver.py  space.py
pathos/spaces/: __init__.py  csp.py  game.py  graph.py  schedule.py  tour.py
tests/: test_adversarial.py  test_adversarial_cancel.py  test_adversarial_mode.py  test_adversarial_pv.py  test_anytime_adversarial.py  test_anytime_astar.py  test_anytime_csp.py  test_anytime_local.py  test_anytime_local_budget.py  test_anytime_metaheuristics.py  test_benchmarks_bin_packing.py  test_benchmarks_classical.py  test_benchmarks_diff.py  test_benchmarks_metrics.py  test_benchmarks_power_grid.py  test_benchmarks_project_scheduling.py  test_benchmarks_records.py  test_benchmarks_report.py  test_benchmarks_rostering.py  test_benchmarks_runner.py  test_benchmarks_smoke.py  test_benchmarks_timetabling.py  test_benchmarks_vrp.py  test_benchmarks_vrptw.py  test_cancel_token.py  test_compatibility_guards.py  test_csp.py  test_epsilon.py  test_evolutionary.py  test_examples.py  test_fairness.py  test_ga_defaults.py  test_goal_aware_reporting.py  test_goal_preference.py  test_informed.py  test_local.py  test_mode.py  test_mode_auto.py  test_optimality.py  test_parallel.py  (+12 more)
