[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathos-ai"
version = "0.1.0"
description = "Production-ready classical AI search algorithms"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage = "https://github.com/gia-uh/pathos"
Documentation = "https://gia-uh.github.io/pathos"
Repository = "https://github.com/gia-uh/pathos"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.hatch.build.targets.wheel]
packages = ["pathos"]

[tool.mypy]
python_version = "3.11"
strict = true
